<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/ll_match_info_write"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fab_margin"/>

        <LinearLayout
                android:id="@+id/ll_team_a_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

            <LinearLayout
                    android:id="@+id/ll_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <TextView
                        android:id="@+id/tv_team_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_team_name_a"
                        android:textSize="@dimen/font_match_info"
                        android:textStyle="bold"/>

                <EditText
                        android:id="@+id/et_team_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/default_team_name_a"
                        android:textSize="@dimen/font_size_large"
                        android:inputType="text"
                        android:maxLines="1"/>

            </LinearLayout>

            <androidx.legacy.widget.Space
                    android:layout_width="@dimen/fab_margin"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/ll_goalkeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/iv_goalkeeper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:src="@drawable/jersey_default"
                        android:contentDescription="@string/outfielder"/>

                <TextView
                        android:id="@+id/tv_goalkeeper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/goalkeeper"
                        android:textSize="@dimen/font_size_small"
                        android:gravity="center"/>

            </LinearLayout>

            <androidx.legacy.widget.Space
                    android:layout_width="@dimen/fab_margin"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/ll_outfielder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/iv_outfielder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:src="@drawable/jersey_default"
                        android:contentDescription="@string/outfielder"/>

                <TextView
                        android:id="@+id/tv_outfielder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/outfielder"
                        android:textSize="@dimen/font_size_small"
                        android:gravity="center" />
            </LinearLayout>

        </LinearLayout>

        <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fab_margin"/>

        <TextView
                android:id="@+id/tv_team_b"
                android:text="@string/default_team_name_b"
                android:textSize="@dimen/font_match_info"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/et_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_team_name_b"
                android:textSize="@dimen/font_size_large"
                android:inputType="text"
                android:maxLines="1"/>

        <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fab_margin"/>

        <TextView
                android:id="@+id/tv_match_info"
                android:text="@string/default_match_title"
                android:textSize="@dimen/font_match_info"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <include
                layout="@layout/match_info_write"
                android:id="@+id/rl_match_info_write"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>