<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_match_info_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

    <TextView
            android:id="@+id/tv_match_info_team_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/default_team_name_a"
            android:textSize="@dimen/font_team_name_primary"
            android:textStyle="bold" />

    <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

    <TextView
            android:id="@+id/tv_match_info_team_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_match_info_team_a"
            android:layout_centerHorizontal="true"
            android:text="@string/default_team_name_b"
            android:textSize="@dimen/font_team_name_secondary"
            android:textStyle="bold" />

    <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

    <TextView
            android:id="@+id/tv_match_info_name_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_match_info_team_b"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/default_match_info"
            android:textSize="@dimen/font_match_info" />

</RelativeLayout>