...
    <string name="action_load">Lineup History</string>
    <string name="action_swap">Swap Player</string>
    <string name="version">Version</string>
    <string name="title_select_team_name">Select Team A</string>
    <string name="default_team_name_a">Team A</string>
    <string name="default_team_name_b">Team B</string>
    <string name="versus">vs. </string>
    <string name="title_fixture">Match</string>
    <string name="default_match_title">Match Info</string>
    <string name="default_match_info">Competition name and stage, time and date, venue etc.</string>
    <string name="default_team_name">Select Team</string>
    <string name="default_match_info_competition_title">Competition</string>
    <string name="default_match_info_competition_name">Enter Competition</string>
...
    <string name="error_player_name_char_limit">Character limit reached!</string>
    <string name="error_player_number_in_use">Player number is already in use by</string>
    <string name="player_name_char_limit">20</string>
    <string name="close_title">Close?</string>
    <string name="close_message">Any unsaved changes to your team, player or venue information will be lost</string>
    <string name="reset_message">All team, player and venue information will be deleted</string>
    <string name="delete_title">Delete</string>
    <string name="delete_message">All selected teams will be permanently deleted</string>
    <string name="set_match_details">Edit Match Info</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="share">Share Via</string>
    <string name="file_name_empty">Filename cannot be empty!</string>
    <string name="file_name_exists">Filename already exists!</string>
    <string name="permission_error_msg_external_storage">Not able to perform operation, external storage permission required</string>
    <string name="delete_permission_error_msg">Not able to delete screenshot(s)</string>
    <string name="delete_not_available">"No teams selected to delete!"</string>
    <string name="delete_all_success">"All teams have been deleted!"</string>
    <string name="create_new_team">Create new lineup</string>
    <string name="duplicate_a_team">Duplicate an existing lineup</string>
    <string name="select_team_to_duplicate">Duplicate</string>
    <string name="overwrite_file">Overwrite file if it exists</string>
    <string name="swap_name">Name</string>
    <string name="swap_number">Number</string>
    <string name="swap_name_and_number">Name and Number</string>
...
