<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <GridView
            android:id="@+id/gv_jerseys"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="4dp"
            android:columnWidth="80dp"
            android:gravity="center"
            android:numColumns="4"
            android:verticalSpacing="10dp"
            android:stretchMode="columnWidth">
    </GridView>

</RelativeLayout>